log
Thu 20 Apr 2023 11:59:28 PM UTC: 
 tests:  1|8
total_score: 0/70
4154086
Fri 21 Apr 2023 12:08:30 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
f5db094
Fri 21 Apr 2023 12:16:01 AM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:3: error: unknown type name ‘treenode’; did you mean ‘TreeNode’?
   76 |   treenode* current = map->root;
      |   ^~~~~~~~
      |   TreeNode
treemap.c:76:23: error: ‘map’ undeclared (first use in this function)
   76 |   treenode* current = map->root;
      |                       ^~~
treemap.c:76:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:78:15: error: request for member ‘key’ in something not a structure or union
   78 |     if(current->key > key){
      |               ^~
treemap.c:79:24: error: request for member ‘left’ in something not a structure or union
   79 |       current = current->left;
      |                        ^~
treemap.c:81:20: error: request for member ‘key’ in something not a structure or union
   81 |     else if(current->key < key){
      |                    ^~
treemap.c:82:24: error: request for member ‘right’ in something not a structure or union
   82 |       current = current->right;
      |                        ^~
treemap.c:84:15: error: request for member ‘key’ in something not a structure or union
   84 |     if(current->key == key){
      |               ^~
treemap.c:86:14: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
   86 |       return 1;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
c187143
Fri 21 Apr 2023 12:16:19 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:23: error: ‘map’ undeclared (first use in this function)
   76 |   TreeNode* current = map->root;
      |                       ^~~
treemap.c:76:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:78:15: error: ‘TreeNode’ has no member named ‘key’
   78 |     if(current->key > key){
      |               ^~
treemap.c:81:20: error: ‘TreeNode’ has no member named ‘key’
   81 |     else if(current->key < key){
      |                    ^~
treemap.c:84:15: error: ‘TreeNode’ has no member named ‘key’
   84 |     if(current->key == key){
      |               ^~
treemap.c:86:14: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
   86 |       return 1;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
63cc9bc
Fri 21 Apr 2023 12:27:57 PM UTC: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:32: error: expected identifier before ‘,’ token
   78 |     if(is_equal(tree, current->, void* key2)){
      |                                ^
treemap.c:81:27: error: comparison of distinct pointer types lacks a cast [-Werror]
   81 |     else if(current->pair < key){
      |                           ^
cc1: all warnings being treated as errors
Compilation failed
fa6efb6
